video view functions and all chennsl work
