# juggertube/api/video_api_blueprint.py
@@ -1,7 +1,10 @@
+from datetime import datetime
+
 from flask import Blueprint, request, jsonify
 from flask_login import login_required
 
-from juggertube.api.serializing import serialize_video, serialize_team, serialize_tournament, serialize_channel
+from juggertube.api.serializing import serialize_video, serialize_team, serialize_tournament, serialize_channel, \
+    serialize_choices
 from juggertube.game_system_enum import GameSystem
 from juggertube.models import Video, db, Team, Channel, Tournament
 from juggertube.video_type_enum import VideoType
@@ -13,23 +16,57 @@ video_api_blueprint = Blueprint('api/videos', __name__)
 def add_video():
     if request.method == 'POST':
         post_data = request.args
+        video_data = {
+            'name': post_data.get('name'),
+            'channel_id': post_data.get('channel_id'),
+            'category': VideoType[post_data.get('category')],
+            'link': post_data.get('link'),
+            'upload_date': datetime.strptime(post_data.get('upload_date'), '%Y-%m-%dT%H-%M-%S'),
+        }
 
-        game_system = post_data["game_system"]
-        if game_system == '':
-            game_system = None
-        else:
-            game_system = GameSystem[game_system]
+        print(video_data)
 
-        team_one = Team.query.filter_by(id=post_data["team_one_id"])
-        team_two = Team.query.filter_by(id=post_data["team_two_id"])
+        if (not video_data['name'] or not video_data['channel_id'] or not video_data['category']
+                or not video_data['link'] or not video_data['upload_date']):
+            return jsonify({'error': 'name, channel_id, category, link and uploadDate are required'}), 400
 
-        new_video = Video(name=post_data["name"], channel_id=post_data["channel_id"], link=post_data["link"],
-                          category=VideoType[post_data["category"]], tournament_id=post_data["tournament_id"],
-                          team_one_id=post_data["team_one_id"], team_one=team_one, team_two_id=post_data["team_two_id"],
-                          team_two=team_two, upload_date=post_data["upload_date"],
-                          date_of_recording=post_data["date_of_recording"], game_system=game_system,
-                          weapon_type=post_data["weapon_type"], topic=["topic"], guests=["guests"],
-                          comments=["comments"])
+        comments = post_data.get("comments")
+        tournament_id = post_data.get("tournament_id")
+        team_one_id = post_data.get("team_one_id")
+        team_two_id = post_data.get("team_two_id")
+        date_of_recording = post_data.get('date_of_recording'),
+        weapon_type = post_data.get("weapon_type")
+        topic = post_data.get("topic")
+        guests = post_data.get("guests")
+        if post_data.get('game_system'):
+            video_data['game_system'] = GameSystem[post_data.get('game_system')]
+
+        if video_data['category'] == VideoType.MATCH and not (tournament_id and team_one_id and team_two_id
+                                                              and date_of_recording and video_data['game_system']):
+            return jsonify({'error': 'When the Video is a Match, tournament_id, team_one_id, team_two_id, '
+                                     'date_of_recording and game_system are required'}), 400
+
+        if tournament_id:
+            video_data['tournament_id'] = tournament_id
+        if team_one_id:
+            video_data['team_one_id'] = team_one_id
+            video_data['team_one'] = Team.query.filter_by(id=team_one_id).first()
+        if team_two_id:
+            video_data['team_two_id'] = team_two_id
+            video_data['team_two'] = Team.query.filter_by(id=team_two_id).first()
+        if date_of_recording:
+            video_data['date_of_recording'] = date_of_recording
+
+        if comments:
+            video_data['comments'] = comments
+        if weapon_type:
+            video_data['weapon_type'] = weapon_type
+        if topic:
+            video_data['topic'] = topic
+        if guests:
+            video_data['guests'] = guests
+
+        new_video = Video(**video_data)
 
         existing_video = Video.query.filter_by(name=new_video.name).first()
         if existing_video:
@@ -39,10 +76,11 @@ def add_video():
                 db.session.add(new_video)
                 db.session.commit()
 
-                video = serialize_video(Video.query.filter_by(name=new_video.name).first())
-                return jsonify(video), 200
-
+                video = Video.query.filter_by(name=new_video.name).first()
+                serialized_video = serialize_video(video)
+                return jsonify(serialized_video), 200
             except Exception as e:
+                db.session.rollback()
                 return jsonify(str(e)), 400
 
 
@@ -136,7 +174,7 @@ def get_videos_by_tournament_and_team(tournament_id, team_id):
 def get_videos_by_period(beginning, ending):
     videos = Video.query.filter(
         Video.date_of_recording > beginning, Video.date_of_recording < ending
-    ). all()
+    ).all()
     video_list = [serialize_video(video) for video in videos]
     return jsonify(video_list)
 
@@ -147,9 +185,9 @@ def get_form_choices():
     teams = [(team.id, team.name) for team in Team.query.all()]
     channels = [(channel.id, channel.name) for channel in Channel.query.all()]
 
-    tournament_choices = [serialize_tournament(tournament) for tournament in tournaments]
-    team_choices = [serialize_team(team) for team in teams]
-    channel_choices = [serialize_channel(channel) for channel in channels]
+    tournament_choices = [serialize_choices(tournament) for tournament in tournaments]
+    team_choices = [serialize_choices(team) for team in teams]
+    channel_choices = [serialize_choices(channel) for channel in channels]
 
     response = {
         "tournament_choices": tournament_choices,
